welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: type mismatch;
 found   : java.awt.Color
 required: String
		hunt(getParam(0).asInstanceOf[Color]); 
                                             ^SlugSnail:5: error: value color is not a member of object java.awt.Color
    if (getCouleurSol()==Color.color){
                               ^SlugSnail:17: error: not enough arguments for method isFacingTrail: (color: String)Boolean.
Unspecified value parameter color.
    if (isFacingTrail()==true){
                     ^SlugSnail:24: error: not enough arguments for method isFacingTrail: (color: String)Boolean.
Unspecified value parameter color.
      if (isFacingTrail()==true){
                       ^